<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AddActivity">

    <EditText
        android:id="@+id/productName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/et_bg"
        android:ems="10"
        android:hint="@string/enter_the_product_name"
        android:inputType="text"
        android:padding="20dp"
        android:textColorHint="#5D4449"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView"
        android:autofillHints="" />

    <EditText
        android:id="@+id/productTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/et_bg"
        android:ems="10"
        android:hint="@string/enter_the_product_item"
        android:inputType="text"
        android:padding="20dp"
        android:textColorHint="#5D4449"
        app:layout_constraintEnd_toEndOf="@+id/productName"
        app:layout_constraintStart_toStartOf="@+id/productName"
        app:layout_constraintTop_toBottomOf="@+id/productName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/et_bg"
        android:ems="10"
        android:hint="@string/enter_the_price"
        android:inputType="text"
        android:padding="20dp"
        android:textColorHint="#5D4449"
        app:layout_constraintEnd_toEndOf="@+id/productTitle"
        app:layout_constraintStart_toStartOf="@+id/productTitle"
        app:layout_constraintTop_toBottomOf="@+id/productTitle"
        android:autofillHints="" />

    <EditText
        android:id="@+id/tax"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/et_bg"
        android:ems="10"
        android:hint="@string/enter_the_tax"
        android:inputType="text"
        android:padding="20dp"
        android:textColorHint="#5D4449"
        app:layout_constraintEnd_toEndOf="@+id/price"
        app:layout_constraintStart_toStartOf="@+id/price"
        app:layout_constraintTop_toBottomOf="@+id/price"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:letterSpacing="0.04"
        android:text="@string/add_item"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/post"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="117dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#FF9100"
        android:padding="10dp"
        android:text="@string/post"
        android:textColor="#455A64"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tax" />
</androidx.constraintlayout.widget.ConstraintLayout>