<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:cardBackgroundColor="#bde0fe">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="2dp"
            android:padding="8dp"
            android:scaleType="fitXY"
            tools:srcCompat="@tools:sample/backgrounds/scenic"
            android:contentDescription="@string/image" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:id="@+id/productName"
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/productname"
                    android:paddingStart="10dp"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />
                <TextView
                    android:id="@+id/productType"
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/product_type"
                    android:paddingStart="10dp"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />
                <TextView
                    android:id="@+id/price"
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/price"
                    android:paddingStart="10dp"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />
                <TextView
                    android:id="@+id/tax"
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/tax"
                    android:paddingStart="10dp"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />



            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>